--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,43 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+
+/* todo: FONTS ADDED */
+@font-face {
+  font-family: "Nunito-Black";
+  src:  url("./assets/fonts/Nunito-Black.ttf") format('truetype'),
+        url('./assets/fonts/Nunito-Black.woff') format('woff');
+}
+
+@font-face {
+  font-family: "Nunito-Bold";
+  src:  url("./assets/fonts/Nunito-Bold.ttf") format('truetype'),
+        url('./assets/fonts/Nunito-Bold.woff') format('woff');;
+}
+
+@font-face {
+  font-family: "Nunito-SemiBold";
+  src:  url("./assets/fonts/Nunito-SemiBold.ttf") format('truetype'),
+        url('./assets/fonts/Nunito-SemiBold.woff') format('woff');
+}
+
+@font-face {
+  font-family: "Nunito-Medium";
+  src:  url("./assets/fonts/Nunito-Medium.ttf") format('truetype'),
+        url('./assets/fonts/Nunito-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: "Nunito-Regular";
+  src:  url("./assets/fonts/Nunito-Regular.ttf") format('truetype'),
+        url('./assets/fonts/Nunito-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: "Nunito-Light";
+  src:  url("./assets/fonts/Nunito-Light.ttf") format('truetype'),
+        url('./assets/fonts/Nunito-Light.woff') format('woff');
 }
