--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,20 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Courier New', Courier, monospace;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+section{
+  padding-top: 0;
+  padding-bottom: var(--navbar_height);
+}
+
+@media screen and (min-width: 800px) {
+  section{
+    padding-top: var(--navbar_height);
+    padding-bottom: 0;
+  }
 }
 
 
