--- a/src/layouts/Navbar/style.css
+++ b/src/layouts/Navbar/style.css
@@ -10,6 +10,8 @@ nav{
     -webkit-box-shadow: 0px -5px 8px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px -5px 8px 0px rgba(0,0,0,0.25);
     box-shadow: 0px -5px 8px 0px rgba(0,0,0,0.25);
+    background-color: white;
+    z-index: 99;
 }
 
 .navbar-inner{
