navabr minor style fix

--- a/src/layouts/Navbar/style.css
+++ b/src/layouts/Navbar/style.css
@@ -104,6 +104,7 @@ nav{
     nav{
         top: 0;
         box-shadow: none;
+        background-color: transparent;
     }
     .navbar-inner .logo{
         display: flex;
