--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,4 +1,5 @@
 .mobile-page-title {
+    position: relative;
     width: 100%;
     height: var(--navbar_height);
     background-color: white;
@@ -6,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
 }
 
 .mobile-page-title h1 {
@@ -21,6 +23,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: var(--navbar_height);
 }
 
 header .img-bg{
@@ -30,11 +33,11 @@ header .img-bg{
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: left center;
     background-size: cover;
     background-attachment: fixed;
     filter: blur(4px);
-    background-color: red;
+    z-index: 1;
 }
 
 header .content{
@@ -44,7 +47,7 @@ header .content{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(13, 23, 42, .8);
     z-index: 50;
     padding: 15px;
     text-align: center;
