style and bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,10 @@ html, body, #root{
 }
 
 section{
+  position: relative;
   padding-top: 0;
   padding-bottom: var(--navbar_height);
+  min-height: 100vh;
 }
 
 .custom-button{
