--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -23,7 +23,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: var(--navbar_height);
+    margin-bottom: 25px;
 }
 
 header .img-bg{
@@ -33,7 +33,7 @@ header .img-bg{
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-position: left center;
+    background-position: center;
     background-size: cover;
     background-attachment: fixed;
     filter: blur(4px);
