--- a/src/layouts/Navbar/style.css
+++ b/src/layouts/Navbar/style.css
@@ -13,7 +13,7 @@ nav{
     -moz-box-shadow: 0px -5px 8px 0px rgba(0,0,0,0.25);
     box-shadow: 0px -5px 8px 0px rgba(0,0,0,0.25);
     background-color: white;
-    z-index: 99;
+    z-index: 9999999999999999999999999;
     transition: all .25s cubic-bezier(.4, 0, .2, 1);
 }
 
