--- a/src/pages/BooksRead/style.css
+++ b/src/pages/BooksRead/style.css
@@ -27,17 +27,13 @@
     overflow: hidden;
     transition: var(--transition);
     cursor: pointer;
-    perspective: 500px;
     box-shadow: 0 3px 8px var(--transparent_dark);
+    z-index: 1;
 }
 
 .book-card:hover{
     transform: rotate(-90deg);
     z-index: 99999
-}
-
-.book-card:hover .front-face{
-    transform: scale(2) rotate(90deg);
 }
 
 .book-card:hover .back-face{
@@ -67,10 +63,8 @@
     position: absolute;
     top: 0;
     left: 100%;
-    padding: 10px 15px;
     width: var(--card-height);
     height: var(--card-width);
-    background-color: rgba(0, 0, 0, .8);
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
     -webkit-transform-origin: left top;
@@ -78,9 +72,83 @@
     opacity: 0;
     border-radius: 12px;
     color: white;
+    transition: var(--transition);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+}
+
+.book-card .back-face .back-face-content{
+    width: 100%;
+    height: 100%;
+    background-color: var(--transparent_dark);
+    padding: 10px 15px;
+    overflow-y: auto;
+    text-align: center;
+}
+
+.book-card .back-face h1, h2, .line, h3{
+    margin-bottom: 8px;
+}
+
+.book-card .back-face h1{
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-family: monospace;
+}
+
+.book-card .back-face h2{
+    position: relative;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 3px;
+}
+
+.book-card .back-face .line{
+    width: 100%;
+    height: 1.5px;
+    border-radius: 99px;
+    background-color: white;
+}
+
+.book-card .back-face h3{
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.book-card .back-face p{
+    font-size: 16px;
+    font-weight: 400;
+}
+
+@media screen and (max-width: 325px) {
+    :root{
+        --card-width: 195px;
+        --card-height: 303.33px;
+    }
+    .book-card .back-face h1, h2, .line, h3{
+        margin-bottom: 5px;
+    }
+    .book-card .back-face h1{
+        font-size: 18px;
+    }
+    .book-card .back-face h2{
+        font-size: 16px;
+    }
+    .book-card .back-face h3{
+        font-size: 14px;
+    }
+    .book-card .back-face p{
+        font-size: 14px;
+    }
 }
 
 @media screen and (min-width: 475px) {
+    :root{
+        --card-width: 213.88px;
+        --card-height: 333.33px;
+    }    
     .books-content{
         grid-template-columns: 1fr 1fr;
     }
@@ -89,5 +157,33 @@
 @media screen and (min-width: 800px) {
     .books-content{
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    :root{
+        --card-width: 250px;
+        --card-height: 389.62px;
+    }
+    .book-card .back-face h1, h2, .line, h3{
+        margin-bottom: 12px;
+    }
+    .book-card .back-face h1{
+        font-size: 24px;
+    }
+    .book-card .back-face h2{
+        font-size: 20px;
+    }
+    .book-card .back-face h3{
+        font-size: 16px;
+    }
+    .book-card .back-face p{
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 1750px) {
+    .books-content{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
