--- a/src/pages/AboutMe/style.css
+++ b/src/pages/AboutMe/style.css
@@ -41,6 +41,43 @@
     font-size: 18px;
     text-transform: capitalize;
     font-family: "Nunito-Bold";
+    color: var(--dark_text);
+}
+
+.biography-wrapper{
+    background: linear-gradient(180deg,#fff,rgba(193,218,249,.8));
+}
+
+.biography{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 25px 0;
+}
+
+.biography img{
+    border-radius: 100%;
+    margin-bottom: 25px;
+    border: 2px solid var(--dark_text);
+    width: 90%;
+    height: auto;
+}
+
+.biography p{
+    font-size: 16px;
+    line-height: 1.5em;
+    letter-spacing: 0.5px;
+    font-family: monospace;
+    font-weight: bold;
+    color: var(--dark_text);
+}
+
+.biography p::first-letter{
+    color: rgba(17,151,209);
+    font-weight: bolder;
+    font-size: 5em;
+    text-shadow: 2px 2px var(--dark_text);
 }
 
 @media screen and (min-width: 475px) {
@@ -61,6 +98,20 @@
         width: 50px;
         height: 50px;
     }
+    .biography-wrapper{
+        background: linear-gradient(90deg,#fff,rgba(193,218,249,.8));
+    }
+    .biography{
+        flex-direction: row;
+    }
+    .biography img{
+        width: 400px;
+        margin-bottom: 0;
+        margin-right: 50px;
+    }
+    .biography p{
+        font-size: 18px;
+    }
 }
 
 @media screen and (min-width: 1500px) {
@@ -70,5 +121,12 @@
     .language-card img{
         width: 64px;
         height: 64px;
+    }
+    .biography img{
+        width: 450px;
+        margin-bottom: 0;
+    }
+    .biography p{
+        font-size: 20px;
     }
 }
