--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   --dark_text: #0d172a;
   --transparent_dark: rgba(13, 23, 42, .8);
@@ -15,6 +11,10 @@
   font-family: 'Courier New', Courier, monospace;
   list-style-type: none;
   text-decoration: none;
+}
+
+h1,h2,h3,h4,h5,h6{
+  line-height: 1;
 }
 
 html{
