--- a/src/pages/Contact/style.css
+++ b/src/pages/Contact/style.css
@@ -1,5 +1,12 @@
 #contact{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#contact .seperate-contact{
+    width: 100%;
 }
 
 #contact .content-wrapper{
