--- a/src/pages/AboutMe/style.css
+++ b/src/pages/AboutMe/style.css
@@ -138,7 +138,7 @@
         margin-right: 50px;
     }
     .biography p{
-        font-size: 18px;
+        font-size: 18px !important;
     }
 }
 
