--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--transparent_dark);
-    z-index: 9999999999999999999999999999999999;
+    z-index: 999999;
     display: flex;
     justify-content: center;
     align-items: center;
