--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -19,11 +19,12 @@
 
 header{
     position: relative;
-    height: 325px;
+    min-height: 325px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;
+    align-items: center;*/
     margin-bottom: 25px;
+    padding: 0;
 }
 
 header .img-bg{
@@ -41,16 +42,19 @@ header .img-bg{
 }
 
 header .content{
-    width: 100%;
-    height: 100%;
+    /*position: absolute;
+    top: 0;
+    left: 0;*/
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    min-height: 100%;
     flex-direction: column;
     background-color: var(--transparent_dark);
     z-index: 50;
-    padding: 15px;
     text-align: center;
+    padding: 25px;
 }
 
 header .content p{
@@ -74,7 +78,6 @@ header .content .custom-button{
     }
 }
 
-
 @media screen and (min-width: 800px) {
     .mobile-page-title {
         display: none;
@@ -83,10 +86,13 @@ header .content .custom-button{
         height: 500px;
         margin-top: calc(-1 * var(--navbar_height));
         margin-bottom: 50px;
+        justify-content: center;
+        align-items: center;
     }
     header .content {
         width: 75%;
         height: auto;
+        min-height: auto;
         padding: 50px 25px;
         -webkit-box-shadow: 10px 10px 19px -4px rgba(0,0,0,0.5);
         -moz-box-shadow: 10px 10px 19px -4px rgba(0,0,0,0.5);
