--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --dark_text: #0d172a;
   --transparent_dark: rgba(13, 23, 42, .8);
+  --more_transparent_dark: rgba(13, 23, 42, .25);
   --transition: all .25s cubic-bezier(.4, 0, .2, 1)
 }
 
