--- a/src/pages/BooksRead/style.css
+++ b/src/pages/BooksRead/style.css
@@ -99,7 +99,7 @@
     overflow: hidden;
     transition: var(--transition);
     cursor: pointer;
-    box-shadow: 0 3px 8px var(--transparent_dark);
+    box-shadow: 0 0 8px  var(--more_transparent_dark);
     z-index: 1;
     user-select: none;
 }
