--- a/src/pages/BooksRead/style.css
+++ b/src/pages/BooksRead/style.css
@@ -161,7 +161,7 @@
     text-align: center;
 }
 
-.book-card .back-face h1, h2, .line, h3{
+.book-card .back-face h2, .line, h3{
     margin-bottom: 8px;
 }
 
